Closed Bug 1545313 Opened 5 years ago Closed 3 years ago

browser.startup.blankWindow: Screen flashes when browser starts up (Direct3D 11/Win10+Win7)

Categories

(Core :: Graphics: Layers, defect, P2)

68 Branch
x86_64
Windows
defect

Tracking

()

VERIFIED FIXED
85 Branch
Tracking Status
firefox-esr60 --- unaffected
firefox-esr78 --- wontfix
firefox66 --- wontfix
firefox67 --- wontfix
firefox68 - wontfix
firefox83 --- wontfix
firefox84 --- wontfix
firefox85 --- verified

People

(Reporter: alice0775, Assigned: mattwoodrow)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached file about:support

Screen flashes at browser startup. The screen goes black for a moment.
This is noticeable if browser is maximized.

Reproduced: always

Steps To Reproduce:

  1. Maximized
  2. Choose "Blank Page" for Homepage and new windows in option
  3. Restart

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=be0d3112f763654b22e9d5d318b9c398297684b4&tochange=b3cffdee2f6caadc379280a90a8d85ca80870f3e

Regressed by:
b3cffdee2f6c Ryan Hunt — Bug 1544538 - Pref off advanced layers. r=jrmuizel

Has Regression Range: --- → yes
Has STR: --- → yes
Keywords: regression
Component: Tabbed Browser → Graphics: Layers
Product: Firefox → Core

I was able to reproduce. Doesn't happen with Basic, WebRender or Advanced Layers.

Flags: needinfo?(rhunt)
Priority: -- → P2

(Ryan Hunt [:rhunt] from bug 1547805 comment 5)

CompositorD3D11 is only on 2% of the users, so maybe that's why we haven't had it reported. I'd be curious if it was regressed by something in the meantime since we turned on AL.

This preexisting bug does not happen with browser.startup.blankWindow;false.
Mozregression (layers.mlgpu.enabled:false gfx.webrender.force-disabled:true) points to bug 1447719 comment 6.
comment 1 was correct.

Regressed by: 1447719
See Also: → 1448146
Summary: Screen flashes when browser start up → Screen flashes when browser start up (Direct3D 11/Win10)
Blocks: 1544538
Flags: needinfo?(florian)
No longer regressed by: 1544538
OS: Windows 10 → Windows
Summary: Screen flashes when browser start up (Direct3D 11/Win10) → Screen flashes when browser start up (Direct3D 11/Win10+Win7)

The problem is now gone by b5867ca37387ceb32cb16f0c782b68a3c9519842 Ryan Hunt — Bug 1547805 - Pref advanced layers back on.

Probably not gone for "2% of the users" and this still blocks switching advanced layers off again.

Yes, this bug is valid for the small amount of users who still get CompositorD3D11.

It's not a new regressions however, and because we turned advanced layers back on for most of the population the situation should be the same as previous releases. We should not track this for the firefox 68 release.

Flags: needinfo?(rhunt)
Blocks: 1541472
Summary: Screen flashes when browser start up (Direct3D 11/Win10+Win7) → browser.startup.blankWindow: Screen flashes when browser starts up (Direct3D 11/Win10+Win7)

This matches the behaviour of MLGDevice

Depends on D98036

Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ea7a5405334e
Don't force present if we haven't resized the swap chain yet. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
Regressions: 1680500
Flags: qe-verify+

Hello I have managed to reproduce the issue with the STR with Firefox 82.0a1 (2020-09-02).
I can confirm that the issue is fixed with Firefox Nightly 85.0a1(2020-12-13) 86.0a1 (2020-12-16). Updating the flags accordingly.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: