Bug 1545313 - Don't force present if we haven't resized the swap chain yet. r=jrmuizel

This matches the behaviour of MLGDevice

Depends on D98036

Differential Revision: https://phabricator.services.mozilla.com/D98091