gfx/layers/d3d11/CompositorD3D11.cpp
@@ -1425,7 +1425,7 @@ void CompositorD3D11::ForcePresent() {
   mSwapChain->GetDesc(&desc);
 
   if (desc.BufferDesc.Width == size.width &&
-      desc.BufferDesc.Height == size.height) {
+      desc.BufferDesc.Height == size.height && size == mBufferSize) {
     mSwapChain->Present(0, 0);
     if (mIsDoubleBuffered) {
       // Make sure we present what was the front buffer before that we know is
@@ -1528,6 +1528,9 @@ bool CompositorD3D11::VerifyBufferSize() {
     gfxCriticalNote << "D3D11 swap resize buffers failed " << hexa(hr) << " on "
                     << mSize;
     HandleError(hr);
+    mBufferSize = LayoutDeviceIntSize();
+  } else {
+    mBufferSize = mSize;
   }
 
   mBackBufferInvalid = mFrontBufferInvalid =
